Mark the sourceType non-null on labs

--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -676,6 +676,7 @@ components:
                 - observationId
                 - date
                 - value
+                - sourceType
             properties:
                 typeId:
                     type: string
