--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,7 +16,7 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.5.1
+    version: 0.6.0
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
@@ -586,6 +586,37 @@ components:
                 value. For example, a value of `15` with a comparator of `GREATER_THAN` means that the value is `> 15`.
                 Note that a comparator won't be provided when the value is an exact value, or in other words, there is
                 no EQUALS comparator - it will just be null.
+        InterpretationDetails:
+            type: object
+            description: >
+                A Product level conception of an interpretation. Note that this differs from a FHIR
+                interpretation in that it's both normalized from the myriad interpretations FHIR supports to a focused
+                set, and each interpretation is augmented with user oriented details (like a display label).
+                
+                When the interpretation is null, that means that the interpretation is *unknown*, not that it is
+                necessarily normal.
+                
+                Note that under the hood this is driven by the observation_interpretation flexible registry, but
+                consumers should not typically want or need to be aware of that.
+            properties:
+                id:
+                    type: string
+                    description: The id of this interpretation
+                    example: 40aa04b1-8b33-4e28-acc0-c6ead7b93a1f
+                shortLabel:
+                    type: string
+                    description: The short label of this interpretation, as suitable to display inline with a value.
+                    example: (H)
+                isNoteworthy:
+                    type: boolean
+                    description: >
+                        Whether or not this interpretation is of interest to a clinician. Practically speaking, this is
+                        an indicator of whether or not the interpretation should be rendered specially and will be true
+                        for non-normal interpretations.
+            required:
+                - id
+                - shortLabel
+                - isNoteworthy
         Vital:
             type: object
             required:
@@ -656,7 +687,14 @@ components:
                 interpretation:
                     type: string
                     example: 'N'
-                    description: The interpretation of the ref range, if there is one. Either N, L, H, or empty.
+                    description: >
+                        The interpretation of the ref range, if there is one. Either N, L, H, or empty.
+                        
+                        This is deprecated and should no longer be used since it is incomplete. Use 
+                        interpretationDetails instead.
+                    deprecated: true
+                interpretationDetails:
+                    $ref: "#/components/schemas/InterpretationDetails"
                 sourceType:
                     type: string
                     example: 'EHR Reported'
@@ -710,6 +748,14 @@ components:
                 interpretation:
                     type: string
                     example: 'N'
+                    description: >
+                        The interpretation of the ref range, if there is one. Either N, L, H, or empty.
+                    
+                        This is deprecated and should no longer be used since it is incomplete. Use
+                        interpretationDetails instead.
+                    deprecated: true
+                interpretationDetails:
+                    $ref: "#/components/schemas/InterpretationDetails"
                 sourceType:
                     type: string
                     example: 'EHR Reported'
