--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -656,9 +656,9 @@ components:
                 values:
                     type: array
                     description: >
-                        The value(s) of this vital. Note that only blood pressure will ever have more than one value in
-                        which case the valueType can be used to know which blood pressure component the value is for (
-                        i.e. systolic vs diastolic).
+                        The value(s) of this vital. Note that only blood pressure will ever have more than one value, in
+                        which case the order will always be [systolic, diastolic]. Additionally, the valueType can be 
+                        used to know which blood pressure component the value is for (i.e. systolic vs diastolic).
                     items:
                         $ref: "#/components/schemas/VitalValue"
         VitalValue:
